# multi-agent-financial-rag

./: .gitignore  pyproject.toml
src/embeddings/: base_embedder.py  huggingface.py
src/graph/: nodes.py  state.py  workflow.py
src/loaders/: base.py  pdf_loader.py  text_loader.py
src/mapper/: lc_document_to_my_document.py
src/models/: llm_factory.py
src/preprocess/: cleaner.py  splitter.py
src/preprocess/chunking/: fixed_chunker.py
src/rerankers/: base.py  flashrank_reranker.py
src/retrievers/: base.py  bm25_retriever.py  hybrid_retriever.py  retriever_factory.py  vector_retriever.py
src/schemas/: analyst_grade.py  analyst_output.py  chunk.py  document.py  execution_plan.py  financial_report.py  graded_documents.py  refined_query.py  scored_chunk.py  split_chunk.py
src/settings/: configurations.py
src/tests/: run_ingestion.py  test_search.py
src/vectorstores/: base.py  pinecone_db.py
