[project]
name = "evaluate-project-file-changes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.6",
    "pinecone>=8.0.0",
    "sentence-transformers>=5.2.0",
]
