[project]
name = "evaluate-project-file-changes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flashrank>=0.2.10",
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langgraph>=1.0.6",
    "pinecone>=8.0.0",
    "python-dotenv>=1.2.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.2.0",
    "tavily-python>=0.7.19",
]
